Split script tags to diagnose execution point (v2025-11-10-04)

--- a/index.html
+++ b/index.html
@@ -680,8 +680,13 @@
     </div>
 
     <script>
-        // ===== 最優先: スクリプト実行確認 =====
-        alert('🟢 BODY内スクリプト開始 - バージョン: 2025-11-10-03');
+        // ===== テスト1: スクリプトタグが実行されるか =====
+        alert('🟢 BODY内スクリプト開始 - バージョン: 2025-11-10-04');
+    </script>
+    
+    <script>
+        // ===== テスト2: 2つ目のスクリプトタグが実行されるか =====
+        alert('🔵 2番目のスクリプトタグ実行中');
         
         // ===== エラーキャッチャー =====
         window.addEventListener('error', function(e) {
