fix: モバイル最適化、音声設定追加、UX改善、エラー修正
- 長文読解タブのモバイルレイアウト最適化（余白最小化、パフォーマンス改善）
- useMemo/useCallback導入でレンダリングパフォーマンス向上
- ダークモード文字視認性改善（和訳タブ文字色強化）
- 音声設定機能追加（性別・速度調整）
- 不正解時の学習支援強化（正解詳細自動表示）
- スコアボードに学習設定ボタン追加
- 難易度ラベル修正（実際の語数に合わせた表記）
- ComprehensiveReadingView.tsx構文エラー修正
- privacy.htmlセキュリティ・スタイルエラー修正（rel属性追加、インラインスタイル削除）

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -28,6 +28,12 @@
         a {
             color: #4CAF50;
         }
+        hr {
+            margin-top: 50px;
+        }
+        .text-center {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -62,7 +68,7 @@
     <h2>4. 情報の保存場所</h2>
     <ul>
         <li><strong>学習データ</strong>: ユーザーのブラウザ内（LocalStorage）にのみ保存され、外部サーバーには送信されません</li>
-        <li><strong>エラー情報</strong>: Sentry.io（アメリカ合衆国）のサーバーに送信されます。詳細は<a href="https://sentry.io/privacy/" target="_blank">Sentryのプライバシーポリシー</a>をご覧ください</li>
+        <li><strong>エラー情報</strong>: Sentry.io（アメリカ合衆国）のサーバーに送信されます。詳細は<a href="https://sentry.io/privacy/" target="_blank" rel="noopener noreferrer">Sentryのプライバシーポリシー</a>をご覧ください</li>
     </ul>
 
     <h2>5. 情報の共有</h2>
@@ -93,10 +99,10 @@
     <p>本プライバシーポリシーは、サービスの改善に伴い変更される場合があります。重要な変更がある場合は、本ページ上部の「最終更新日」を更新し、お知らせします。</p>
 
     <h2>10. お問い合わせ</h2>
-    <p>プライバシーポリシーに関するご質問は、GitHubリポジトリ（<a href="https://github.com/nanashi8/nanashi8.github.io" target="_blank">nanashi8/nanashi8.github.io</a>）のIssuesにてお問い合わせください。</p>
+    <p>プライバシーポリシーに関するご質問は、GitHubリポジトリ（<a href="https://github.com/nanashi8/nanashi8.github.io" target="_blank" rel="noopener noreferrer">nanashi8/nanashi8.github.io</a>）のIssuesにてお問い合わせください。</p>
 
-    <hr style="margin-top: 50px;">
-    <p style="text-align: center;">
+    <hr>
+    <p class="text-center">
         <a href="/">アプリに戻る</a>
     </p>
 </body>
