feat: 長文タブのパッセージを難易度・語数順でソート

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -164,22 +164,55 @@
         <li><strong>苦情申し立て</strong>: プライバシーに関する懸念がある場合、お住まいの地域のデータ保護機関に申し立てることができます</li>
     </ul>
 
-    <h2>7. セキュリティ</h2>
+    <h2>9. セキュリティ</h2>
     <p>本サービスは以下のセキュリティ対策を実施しています:</p>
     <ul>
-        <li>HTTPS通信による暗号化（GitHub Pages）</li>
-        <li>エラー監視サービス（Sentry）はSOC 2 Type II認証取得済み</li>
-        <li>個人情報を収集しないことによるリスク最小化</li>
+        <li><strong>通信の暗号化</strong>: HTTPS通信による暗号化（GitHub Pages）</li>
+        <li><strong>ローカルストレージ</strong>: 学習データはユーザーのブラウザ内にのみ保存され、外部に送信されません</li>
+        <li><strong>エラー監視</strong>: Sentryはエラー情報を安全に処理し、SOC 2 Type II認証を取得しています</li>
+        <li><strong>最小限の収集</strong>: 個人を特定できる情報を収集しないことによるリスク最小化</li>
+        <li><strong>定期的な更新</strong>: セキュリティパッチの適用、依存ライブラリの更新</li>
+    </ul>
+    <p>ただし、インターネット経由の送信や電子的な保存方法に完全に安全なものはありません。当サービスは最善を尽くしていますが、絶対的な安全性を保証することはできません。</p>
+
+    <h2>10. 子供のプライバシー</h2>
+    <p>本サービスは中学受験を目指す児童を含む全年齢のユーザーを対象としていますが、以下の点により子供のプライバシーを保護しています:</p>
+    <ul>
+        <li>氏名、メールアドレス等の個人情報を一切収集しません</li>
+        <li>学習データはブラウザ内にのみ保存され、外部サーバーに送信されません</li>
+        <li>保護者の同意なしに個人情報を収集することはありません</li>
+    </ul>
+    <p>13歳未満のお子様が本サービスを利用する場合、保護者の方はお子様のブラウザ設定を確認し、必要に応じてデータの削除を行ってください。</p>
+
+    <h2>11. プライバシーポリシーの変更</h2>
+    <p>本プライバシーポリシーは、サービスの改善や法令の変更に伴い更新される場合があります。</p>
+    <ul>
+        <li><strong>軽微な変更</strong>: 本ページ上部の「最終更新日」を更新します</li>
+        <li><strong>重要な変更</strong>: アプリ内で通知し、ユーザーに確認を求める場合があります</li>
+        <li><strong>確認推奨</strong>: 定期的に本ページを確認することをお勧めします</li>
+    </ul>
+    <p>変更後も本サービスを継続して利用することで、変更後のプライバシーポリシーに同意したものとみなされます。</p>
+
+    <h2>12. 適用法令とデータ保護</h2>
+    <p>本サービスは日本国内のユーザーを主な対象としていますが、以下の法令およびガイドラインを尊重します:</p>
+    <ul>
+        <li>個人情報の保護に関する法律（日本）</li>
+        <li>一般データ保護規則（GDPR、EU）- EUユーザーの場合</li>
+        <li>カリフォルニア州消費者プライバシー法（CCPA）- カリフォルニア州ユーザーの場合</li>
     </ul>
 
-    <h2>8. 子供のプライバシー</h2>
-    <p>本サービスは中学受験を目指す児童を含む全年齢のユーザーを対象としていますが、個人情報を収集しないため、特別な保護者同意は不要です。</p>
-
-    <h2>9. プライバシーポリシーの変更</h2>
-    <p>本プライバシーポリシーは、サービスの改善に伴い変更される場合があります。重要な変更がある場合は、本ページ上部の「最終更新日」を更新し、お知らせします。</p>
-
-    <h2>10. お問い合わせ</h2>
-    <p>プライバシーポリシーに関するご質問は、GitHubリポジトリ（<a href="https://github.com/nanashi8/nanashi8.github.io" target="_blank" rel="noopener noreferrer">nanashi8/nanashi8.github.io</a>）のIssuesにてお問い合わせください。</p>
+    <h2>13. お問い合わせ</h2>
+    <p>プライバシーポリシーに関するご質問、データ削除リクエスト、その他のお問い合わせは、以下の方法でご連絡ください:</p>
+    <ul>
+        <li><strong>GitHub Issues</strong>: <a href="https://github.com/nanashi8/nanashi8.github.io/issues" target="_blank" rel="noopener noreferrer">nanashi8/nanashi8.github.io</a></li>
+        <li><strong>対応時間</strong>: 通常、1週間以内に返信いたします</li>
+    </ul>
+    <p>データ削除リクエストの際は、以下の情報を含めてください:</p>
+    <ul>
+        <li>削除を希望するデータの種類（学習データ、エラーログ等）</li>
+        <li>該当する期間（分かる場合）</li>
+        <li>その他の識別情報（エラーID等、分かる場合）</li>
+    </ul>
 
     <hr>
     <p class="text-center">
