fix: モバイル版タブボタンのクラス名不一致を修正
問題:
- CSSのクラス名: score-tabs-mobile
- TSXのクラス名: score-board-tabs-mobile
- この不一致によりモバイル版タブのスタイルが適用されていなかった

修正内容:
- App.css内の.score-tabs-mobileを.score-board-tabs-mobileに統一
- デスクトップ版の非表示設定も.score-board-tabs-mobileに修正
- ダークモード用のクラス名も同様に修正
- test-scoreboard-tabs.htmlも同じクラス名に統一

影響:
- モバイル版（768px以下）でタブボタンが正しく表示されるようになる
- タブコンテナの背景、ボーダー、シャドウが適用される
- デスクトップ版には影響なし

--- a/test-scoreboard-tabs.html
+++ b/test-scoreboard-tabs.html
@@ -133,7 +133,7 @@
       transform: translateY(-2px);
     }
 
-    .score-tabs-mobile {
+    .score-board-tabs-mobile {
       display: none;
     }
 
@@ -142,7 +142,7 @@
         display: none;
       }
 
-      .score-tabs-mobile {
+      .score-board-tabs-mobile {
         display: flex;
         gap: 8px;
         margin-bottom: 12px;
@@ -277,7 +277,7 @@
     <div class="test-section">
       <h2>モバイル版タブ (768px以下)</h2>
       <div class="score-board-compact">
-        <div class="score-board-tabs score-tabs-mobile">
+        <div class="score-board-tabs score-board-tabs-mobile">
           <button class="score-tab active" title="プラン">📋</button>
           <button class="score-tab" title="統計">📊</button>
           <button class="score-tab" title="学習状況">📈</button>
