✨ 文法解説データの大幅改善を完了
## 主な変更内容

### 📚 文法解説の品質向上
- 全25単元・1,780問題の解説を改善
- 品質スコア: 1.58 → 3.92 (148%向上)
- 100%のカバレッジを達成

### ✨ 改善内容
- 構造化された解説セクションを追加:
  - 【文法ポイント】【使い方】【比較】【よくある間違い】
- 比較表現の強化 (will vs be going to, must vs have to)
- 文法規則の体系的な説明
- 受動態、現在完了進行形、比較級・最上級の詳細解説

### 📊 成果
- トップスコア単元:
  - 3年Unit2: 4.17
  - 3年Unit3: 4.06
  - 1年Unit9: 4.04
- 最大改善率: +260% (2年Unit7)
- 4.0以上のスコア: 11単元 (44%)

### 🛠️ 技術改善
- correctAnswer型の修正 (string[] → string)
- TypeScriptテストの型定義更新
- 自動改善スクリプトの開発
- 品質検証システムの構築

### 📝 ドキュメント
- 改善計画書・テンプレート・進捗レポート作成
- 完了サマリーレポート追加
- バックアップファイル保存

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="format-detection" content="telephone=no" />
-    <title>英語クイズ</title>
+    <title>中学生英語学習アプリ</title>
     <!-- サービスワーカー登録（アップデート検知用） -->
     <script>
       // サービスワーカーの登録とアップデート検知
