--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- サービスワーカー登録（アップデート検知用） -->
     <script>
       // サービスワーカーの登録とアップデート検知
-      if ('serviceWorker' in navigator) {
+      // 🔧 開発環境ではService Workerをスキップ（Viteとの競合を回避）
+      if ('serviceWorker' in navigator && !window.location.hostname.includes('localhost') && !window.location.hostname.includes('127.0.0.1')) {
         window.addEventListener('load', async () => {
           try {
             const registration = await navigator.serviceWorker.register('/sw.js', {
