--- a/public/constellation-3d-demo.html
+++ b/public/constellation-3d-demo.html
@@ -216,18 +216,31 @@
     </div>
   </div>
 
-  <script type="importmap">
+  <script defer src="./vendor/es-module-shims/es-module-shims.js"></script>
+  <script type="importmap-shim">
     {
       "imports": {
-        "three": "https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js",
-        "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/"
+        "three": "./vendor/three/three.module.js",
+        "three/addons/": "./vendor/three/addons/"
       }
     }
   </script>
 
-  <script type="module">
-    import * as THREE from 'three';
-    import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
+  <script type="module-shim">
+    const loadingEl = document.getElementById('loading');
+    const showInitError = (error) => {
+      const message = error instanceof Error ? error.message : String(error);
+      console.error('[Constellation3D] init failed:', error);
+      if (loadingEl) {
+        loadingEl.textContent = `❌ 天体儀の初期化に失敗: ${message}`;
+        loadingEl.style.display = 'block';
+      }
+    };
+
+    (async () => {
+      try {
+        const THREE = await import('three');
+        const { OrbitControls } = await import('three/addons/controls/OrbitControls.js');
 
     // サンプルデータ
     const sampleNodes = [
@@ -243,21 +256,21 @@
       { id: 'utils.ts', label: 'utils', priority: 0.4, category: 'Util', connections: 8 }
     ];
 
-    // シーン初期化
-    const scene = new THREE.Scene();
-    scene.background = new THREE.Color(0x0a0a0f);
+      // シーン初期化
+      const scene = new THREE.Scene();
+      scene.background = new THREE.Color(0x0a0a0f);
 
-    // カメラ
-    const camera = new THREE.PerspectiveCamera(
-      75,
-      window.innerWidth / window.innerHeight,
-      0.1,
-      1000
-    );
-    camera.position.set(0, 50, 150);
+      // カメラ
+      const camera = new THREE.PerspectiveCamera(
+        75,
+        window.innerWidth / window.innerHeight,
+        0.1,
+        1000
+      );
+      camera.position.set(0, 50, 150);
 
-    // レンダラー
-    const renderer = new THREE.WebGLRenderer({ antialias: true });
+      // レンダラー
+      const renderer = new THREE.WebGLRenderer({ antialias: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
     renderer.setPixelRatio(window.devicePixelRatio);
     document.getElementById('container').appendChild(renderer.domElement);
@@ -456,7 +469,17 @@
           if (relObj) {
             relObj.material.emissive.setHex(0x44ff88);
             relObj.material.emissiveIntensity = 1.5;
-       3軸表示オンオフ
+          }
+        });
+
+        // 情報パネル更新
+        document.getElementById('current').textContent = node.label + '.ts';
+        document.getElementById('related').textContent =
+          related.map(rn => rn.label + '.ts').join(', ');
+      }
+    });
+
+    // 3軸表示オンオフ
     document.getElementById('toggle-x').addEventListener('change', (e) => {
       // X軸の表示切り替え（赤色コンポーネント）
       axisHelper.visible = e.target.checked ||
@@ -486,16 +509,6 @@
       orbitGroup.visible = e.target.checked;
     });
 
-    //    }
-        });
-
-        // 情報パネル更新
-        document.getElementById('current').textContent = node.label + '.ts';
-        document.getElementById('related').textContent =
-          related.map(rn => rn.label + '.ts').join(', ');
-      }
-    });
-
     // アニメーションループ
     function animate() {
       requestAnimationFrame(animate);
@@ -519,9 +532,13 @@
     });
 
     // ローディング完了
-    document.getElementById('loading').style.display = 'none';
+    if (loadingEl) loadingEl.style.display = 'none';
 
     animate();
+      } catch (error) {
+        showInitError(error);
+      }
+    })();
   </script>
 </body>
 </html>
