fix: モバイル/デスクトップ間のUI/コンテンツ差を解消 & 古典作品カードを複数文山場対応へ強化
- Service Worker: キャッシュ戦略をネットワーク優先に変更し端末差を解消
  - v2キャッシュへ更新（古いキャッシュを確実に破棄）
  - JS/CSS/dataを最新版優先で取得（古いUIが残る問題を防止）
  - controllerchange時の自動リロード追加（SW更新後の古いJS継続を回避）

- 古典作品カード: 例文2を「クライマックスの様子が分かる複数文」に拡充
  - 35作品すべての例文2を山場が伝わる複数文の現代語訳へ更新
  - 代表シーンから作品の核心・転換点が伝わる内容に強化
  - 受験前総まとめPDFで作品理解の深度を向上

- 古典PDF生成パイプライン: CSV→HTML→A5 PDF自動生成を完備
  - fill-classical-japanese-examples.ts: 引用プールから例文自動埋め
  - update-classical-knowledge-works.ts: 作品カード専用の例文管理
  - generate-classical-japanese-pdf.ts: A5カード形式PDF出力

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
               scope: '/'
             });
 
+            // 新しいSWが有効化され controller が切り替わったら、一度だけリロードして最新版JS/CSSへ揃える
+            // （端末間でUI/コンテンツが違って見える主要因＝古いキャッシュの残留を解消）
+            navigator.serviceWorker.addEventListener('controllerchange', () => {
+              try {
+                if (sessionStorage.getItem('_sw_reloaded_once') === '1') return;
+                sessionStorage.setItem('_sw_reloaded_once', '1');
+                setTimeout(() => window.location.reload(), 200);
+              } catch {
+                window.location.reload();
+              }
+            });
+
             // アップデートチェック（起動時と5分ごと）
             setInterval(() => registration.update().catch(() => {}), 5 * 60 * 1000);
 
